# dotfiles

./: .chezmoi.toml.tmpl  .chezmoiignore  .gitattributes  .gitconfig  .gitignore  .tmux.conf  CLAUDE.md  README.md  chezmoi.toml  dot_bashrc  dot_bashrc.tmpl  dot_editorconfig  dot_gitconfig.tmpl  dot_gitignore_global  dot_npmrc  dot_ripgreprc  dot_tool-versions  dot_zshrc  run_once_before_symlink-claude.ps1.tmpl  wsl.conf
.claude/commands/: batch.md  check.md  new.md  quick.md  ship.md  sitrep.md  state.md
.claude/scripts/: batch.sh  git-cache.sh  session.sh  sitrep-fast.sh
.zprezto/runcoms/: zpreztorc  zshrc
Documents/WindowsPowerShell/: Microsoft.PowerShell_profile.ps1
config/: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Justfile  pyproject.toml  python-style.md
docs/: SETUP.md  setup-wsl.md
dot_cargo/: config.toml
dot_claude/: .gitignore  CLAUDE.md  history.jsonl  private_CLAUDE.md  private_settings.json  settings.json
dot_claude/commands/: ?.md  apply.md  archive.md  audit.md  batch.md  bb.md  blackbox.md  check-standards.md  check.md  code.md  h.md  list.md  meta.md  new.md  o.md  private_ship.md  private_sitrep.md  private_todo.md  propose.md  remember.md  s.md  scaffold-python.md  ship.md  state.md  status.md  sync-standards.md  todo.md
dot_claude/debug/: latest  (+3 more)
examples/python/: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  justfile  pyproject.toml
examples/python/openspec/: project.md
examples/python/src/example/: __init__.py  util.py
examples/python/tests/: test_util.py
openspec/: project.md
(+75 files in other folders)
